--- a/src/app/recruiter/recruiter.component.css
+++ b/src/app/recruiter/recruiter.component.css
@@ -14,7 +14,15 @@
   border-radius: 50%;
 }
 
-
+.no-jobs-message {
+  padding: 20px;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  text-align: center;
+  margin: 20px 0;
+}
 
 
 .header {
@@ -307,7 +315,6 @@ button:hover {
   font-size: 14px;
   color: #666;
 }
-
    /* Floating Button */
    .chatbot-float-btn {
     position: fixed;
