--- a/src/app/recruiter-portfolio/recruiter-portfolio.component.css
+++ b/src/app/recruiter-portfolio/recruiter-portfolio.component.css
@@ -524,3 +524,29 @@
 .popup-content button:hover {
   background-color: #0056b3;
 }
+
+.btn-update {
+  background-color: #007bff;
+  color: white;
+  border-radius: 20px;
+  padding: 12px;
+  width: 100px;
+  margin-right: 12px;
+}
+
+.btn-update:hover {
+  background-color: #0056b3;
+}
+
+.btn-delete {
+  background-color: #dc3545;
+  color: white;
+  border-radius: 20px;
+  padding: 12px;
+  width: 100px;
+}
+
+.btn-delete:hover {
+  background-color: #a71d2a;
+}
+
